// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`packem package.json exports > should allow to have folder name the same like file for export 1`] = `
"'use strict';

const config = () => "config";

module.exports = config;
"
`;

exports[`packem package.json exports > should allow to have folder name the same like file for export 2`] = `
"const config = () => "config";

export { config as default };
"
`;

exports[`packem package.json exports > should export dual package for type commonjs 1`] = `
"'use strict';

const index = () => "index";

module.exports = index;
"
`;

exports[`packem package.json exports > should export dual package for type commonjs 2`] = `
"const index = () => "index";

export { index as default };
"
`;

exports[`packem package.json exports > should export dual package for type module 1`] = `
"'use strict';

const index = () => "index";

module.exports = index;
"
`;

exports[`packem package.json exports > should export dual package for type module 2`] = `
"const index = () => "index";

export { index as default };
"
`;

exports[`packem package.json exports > should generate different files for mts and cts with same shared code 1`] = `
"const Colorize = function() {
  return {
    color: "red",
    text: "hello world"
  };
};

const result = Colorize();
const {
  text,
  color
} = result;

export { color, result as default, text };
"
`;

exports[`packem package.json exports > should generate different files for mts and cts with same shared code 2`] = `
"'use strict';

const Colorize = function() {
  return {
    color: "red",
    text: "hello world"
  };
};

const result = Colorize();

module.exports = result;
"
`;

exports[`packem package.json exports > should generate different files, if file with same name, but with cts and mts ending was found 1`] = `
"const result = "mts";

export { result };
"
`;

exports[`packem package.json exports > should generate different files, if file with same name, but with cts and mts ending was found 2`] = `
"'use strict';

Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });

const result = "cts";

exports.result = result;
"
`;

exports[`packem package.json exports > should generate output with all cjs exports > cjs output 1`] = `
"const index = "index";

export { index };
"
`;

exports[`packem package.json exports > should generate output with all cjs exports > cjs output 2`] = `
"'use strict';

Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });

const index = "index.react-server";

exports.index = index;
"
`;

exports[`packem package.json exports > should generate output with all cjs exports > cjs output 3`] = `
"'use strict';

Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });

const foo = "foo";

exports.foo = foo;
"
`;

exports[`packem package.json exports > should generate output with all cjs exports > cjs output 4`] = `
"#!/usr/bin/env node
'use strict';

Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });

const cli = "cli";

exports.cli = cli;
"
`;

exports[`packem package.json exports > should generate proper assets for each exports for server components 1`] = `
"export { Button } from './ui.mjs';
export { action } from './packem_shared/action-Ec_x0XEO.mjs';
export { Client, Client as UIClient } from './packem_shared/Client-97tyEYCZ.mjs';
"
`;

exports[`packem package.json exports > should generate proper assets for each exports for server components 2`] = `
"'use server';
async function action() {
  return "server-action";
}

export { action };
"
`;

exports[`packem package.json exports > should generate proper assets for each exports for server components 3`] = `
"'use client';
function Client() {
  return "client-module";
}

export { Client };
"
`;

exports[`packem package.json exports > should generate proper assets for each exports for server components 4`] = `
"'use strict';

Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });

const ui = require('./ui.cjs');
const action = require('./packem_shared/action-DHDpyHIn.cjs');
const Client = require('./packem_shared/Client-gc0UrNx3.cjs');

exports.Button = ui.Button;
exports.action = action.action;
exports.Client = Client.Client;
exports.UIClient = Client.Client;
"
`;

exports[`packem package.json exports > should generate proper assets for each exports for server components 5`] = `
"'use server';
'use strict';

Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });

async function action() {
  return "server-action";
}

exports.action = action;
"
`;

exports[`packem package.json exports > should generate proper assets for each exports for server components 6`] = `
"'use client';
'use strict';

Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });

function Client() {
  return "client-module";
}

exports.Client = Client;
"
`;

exports[`packem package.json exports > should generate proper assets for each exports for server components with same layer 1`] = `
"'use client';
import React, { useState } from 'react';
export { Client } from './packem_shared/Client-97tyEYCZ.mjs';

function Button() {
  const [count] = useState(0);
  return React.createElement("button", \`count: \${count}\`);
}

export { Button };
"
`;

exports[`packem package.json exports > should generate proper assets for each exports for server components with same layer 2`] = `
"'use client';
function Client() {
  return "client-module";
}

export { Client };
"
`;

exports[`packem package.json exports > should generate proper assets for each exports for server components with same layer 3`] = `
"'use client';
'use strict';

Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });

const React = require('react');
const Client = require('./packem_shared/Client-gc0UrNx3.cjs');

const _interopDefaultCompat = e => e && typeof e === 'object' && 'default' in e ? e.default : e;

const React__default = /*#__PURE__*/_interopDefaultCompat(React);

function Button() {
  const [count] = React.useState(0);
  return React__default.createElement("button", \`count: \${count}\`);
}

exports.Client = Client.Client;
exports.Button = Button;
"
`;

exports[`packem package.json exports > should generate proper assets for each exports for server components with same layer 4`] = `
"'use client';
'use strict';

Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });

function Client() {
  return "client-module";
}

exports.Client = Client;
"
`;

exports[`packem package.json exports > should generate proper assets with custom extensions from outputExtensionMap > cjs output 1`] = `
"'use strict';

Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });

const value = "index";

exports.value = value;
"
`;

exports[`packem package.json exports > should generate proper assets with custom extensions from outputExtensionMap > dts output 1`] = `
"declare const value = "index";
export { value };
"
`;

exports[`packem package.json exports > should generate proper assets with custom extensions from outputExtensionMap > mjs output 1`] = `
"const value = "index";

export { value };
"
`;

exports[`packem package.json exports > should generate proper assets with js based on the package.json exports default > cjs output 1`] = `
"'use strict';

Object.defineProperties(exports, { __esModule: { value: true }, [Symbol.toStringTag]: { value: 'Module' } });

const myMod = require('my-mod');

const _interopDefaultCompat = e => e && typeof e === 'object' && 'default' in e ? e.default : e;

const myMod__default = /*#__PURE__*/_interopDefaultCompat(myMod);

const index = "exports-sugar-default";
function method() {
  return myMod__default.test();
}

exports.default = index;
exports.method = method;
"
`;

exports[`packem package.json exports > should generate proper assets with js based on the package.json exports default > mjs output 1`] = `
"import myMod from 'my-mod';

const index = "exports-sugar-default";
function method() {
  return myMod.test();
}

export { index as default, method };
"
`;

exports[`packem package.json exports > should support wildcard subpath exports 1`] = `
"'use strict';

const index = () => "index";

module.exports = index;
"
`;

exports[`packem package.json exports > should support wildcard subpath exports 2`] = `
"'use strict';

Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });

function render() {
  console.log("Page A");
}

exports.render = render;
"
`;

exports[`packem package.json exports > should support wildcard subpath exports 3`] = `
"function render() {
  console.log("Page A");
}

export { render };
"
`;

exports[`packem package.json exports > should support wildcard subpath exports 4`] = `
"'use strict';

Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });

function render() {
  console.log("Page B");
}

exports.render = render;
"
`;

exports[`packem package.json exports > should support wildcard subpath exports 5`] = `
"function render() {
  console.log("Page B");
}

export { render };
"
`;

exports[`packem package.json exports > should work with ESM package with CJS main field > cjs output 1`] = `
"'use strict';

Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });

const value = "cjs";

exports.value = value;
"
`;

exports[`packem package.json exports > should work with ESM package with CJS main field > mjs output 1`] = `
"const value = "cjs";

export { value };
"
`;

exports[`packem package.json exports > should work with edge export condition 1`] = `
"const isEdge = false;

export { isEdge };
"
`;

exports[`packem package.json exports > should work with edge export condition 2`] = `
"const isEdge = true;

export { isEdge };
"
`;

exports[`packem package.json exports > should work with multi entries 1`] = `
"'use strict';

const index = "index";

module.exports = index;
"
`;

exports[`packem package.json exports > should work with multi entries 2`] = `
"'use strict';

function client(c) {
  return "client" + c;
}

module.exports = client;
"
`;

exports[`packem package.json exports > should work with multi types 1`] = `
"const index = "index";

export { index };
"
`;

exports[`packem package.json exports > should work with multi types 2`] = `
"declare const index = "index";
export { index };
"
`;

exports[`packem package.json exports > should work with multi types 3`] = `
"'use strict';

Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });

const index = "index";

exports.index = index;
"
`;

exports[`packem package.json exports > should work with single entry 1`] = `
"'use strict';

const index = () => "index";

module.exports = index;
"
`;
